[gd_scene load_steps=6 format=3 uid="uid://ctf3cs5jqawcn"]

[ext_resource type="Script" uid="uid://fh3m1aypx6af" path="res://ui/menus/pause_menu.gd" id="1_hv7dm"]

[sub_resource type="Animation" id="Animation_w225i"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1512, -0.2, 0, 0.2, 0, 1512, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0, 0.001)
}

[sub_resource type="Animation" id="Animation_hv7dm"]
resource_name = "slide-in"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1512, -0.2, 0, 0.2, 0, 373, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="Animation" id="Animation_51icm"]
resource_name = "slide-out"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(373, -0.25, 0, 0.25, 0, -762, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51icm"]
_data = {
&"RESET": SubResource("Animation_w225i"),
&"slide-in": SubResource("Animation_hv7dm"),
&"slide-out": SubResource("Animation_51icm")
}

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hv7dm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 812.0
offset_top = -294.0
offset_right = 1466.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -250.5
offset_right = 260.0
offset_bottom = 250.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="BtnResume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "RESUME"

[node name="BtnSettings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SETTINGS"

[node name="BtnMenu" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_51icm")
}

[connection signal="pressed" from="Panel/VBoxContainer/BtnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BtnMenu" to="." method="_on_btn_menu_pressed"]
